Added a few comments to get THtml reading properly

--- a/htmldoc/TFragment.html
+++ b/htmldoc/TFragment.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Tue Sep  2 19:10:06 2014            -->
+<!--   Date: Tue Sep  2 21:13:13 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -58,7 +58,15 @@ return false;}
 </div>
 <div class="dropshadow"><div class="withshadow"><h1><a name="TFragment:description"></a>class TFragment: public TObject</h1>
 <div class="classdescr">
-</div>
+<pre>
+
+<a href="./TFragment.html">TFragment</a>
+
+This <a href="./TFragment.html#TFragment:Class" title="TClass* TFragment::Class()">Class</a> contains all of the information in an event
+fragment
+
+
+</pre></div>
 </div></div>
 
 <div id="functions">
@@ -184,28 +192,28 @@ return false;}
 </table></div>
 <div class="access" id="datapubl"><b>public:</b>
 <table class="data" id="tabdatapubl" cellspacing="0">
-<tr class="data"><td class="datatype">vector&lt;<a href="./ListOfTypes.html#Int_t">Int_t</a>&gt;</td><td class="dataname"><a name="TFragment:Cfd"></a>Cfd</td><td class="datadesc">-&gt;</td></tr>
+<tr class="data"><td class="datatype">vector&lt;<a href="./ListOfTypes.html#Int_t">Int_t</a>&gt;</td><td class="dataname"><a name="TFragment:Cfd"></a>Cfd</td><td class="datadesc">-&gt; </td></tr>
 <tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:ChannelAddress"></a>ChannelAddress</td><td class="datadesc">-&gt;</td></tr>
 <tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UInt_t">UInt_t</a></td><td class="dataname"><a name="TFragment:ChannelId"></a>ChannelId</td><td class="datadesc">-&gt;</td></tr>
 <tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Short_t">Short_t</a></td><td class="dataname"><a name="TFragment:ChannelNumber"></a>ChannelNumber</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype">vector&lt;<a href="./ListOfTypes.html#Int_t">Int_t</a>&gt;</td><td class="dataname"><a name="TFragment:Charge"></a>Charge</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:DataType"></a>DataType</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:DeadTime"></a>DeadTime</td><td class="datadesc">-&gt;</td></tr>
+<tr class="data"><td class="datatype">vector&lt;<a href="./ListOfTypes.html#Int_t">Int_t</a>&gt;</td><td class="dataname"><a name="TFragment:Charge"></a>Charge</td><td class="datadesc">-&gt; The Integrated Charge </td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:DataType"></a>DataType</td><td class="datadesc">-&gt; </td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:DeadTime"></a>DeadTime</td><td class="datadesc">-&gt; Deadtime from trigger</td></tr>
 <tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:DetectorType"></a>DetectorType</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:FragmentId"></a>FragmentId</td><td class="datadesc">-&gt;</td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:FragmentId"></a>FragmentId</td><td class="datadesc">-&gt;  Channel Trigger ID</td></tr>
 <tr class="data"><td class="datatype">vector&lt;<a href="./ListOfTypes.html#UShort_t">UShort_t</a>&gt;</td><td class="dataname"><a name="TFragment:KValue"></a>KValue</td><td class="datadesc">-&gt;</td></tr>
 <tr class="data"><td class="datatype">vector&lt;<a href="./ListOfTypes.html#Int_t">Int_t</a>&gt;</td><td class="dataname"><a name="TFragment:Led"></a>Led</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:MidasId"></a>MidasId</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#time_t">time_t</a></td><td class="dataname"><a name="TFragment:MidasTimeStamp"></a>MidasTimeStamp</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:NumberOfFilters"></a>NumberOfFilters</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:NumberOfPileups"></a>NumberOfPileups</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UInt_t">UInt_t</a></td><td class="dataname"><a name="TFragment:PPG"></a>PPG</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:TimeStampHigh"></a>TimeStampHigh</td><td class="datadesc">-&gt;</td></tr>
-<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:TimeStampLow"></a>TimeStampLow</td><td class="datadesc">-&gt;</td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:MidasId"></a>MidasId</td><td class="datadesc">-&gt; MIDAS ID</td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#time_t">time_t</a></td><td class="dataname"><a name="TFragment:MidasTimeStamp"></a>MidasTimeStamp</td><td class="datadesc">-&gt; Timestamp of the MIDAS event  </td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:NumberOfFilters"></a>NumberOfFilters</td><td class="datadesc">-&gt; Number of filter patterns passed</td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UShort_t">UShort_t</a></td><td class="dataname"><a name="TFragment:NumberOfPileups"></a>NumberOfPileups</td><td class="datadesc">-&gt; Number of piled up hits 1-3</td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#UInt_t">UInt_t</a></td><td class="dataname"><a name="TFragment:PPG"></a>PPG</td><td class="datadesc">-&gt; Programmable pattern generator value</td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:TimeStampHigh"></a>TimeStampHigh</td><td class="datadesc">-&gt; Timestamp high bits</td></tr>
+<tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:TimeStampLow"></a>TimeStampLow</td><td class="datadesc">-&gt; Timestamp low bits</td></tr>
 <tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:TimeToTrig"></a>TimeToTrig</td><td class="datadesc">-&gt;</td></tr>
 <tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Int_t">Int_t</a></td><td class="dataname"><a name="TFragment:TriggerBitPattern"></a>TriggerBitPattern</td><td class="datadesc">-&gt;          MasterFilterPattern in Griffin</td></tr>
 <tr class="data"><td class="datatype"><a href="./ListOfTypes.html#Long_t">Long_t</a></td><td class="dataname"><a name="TFragment:TriggerId"></a>TriggerId</td><td class="datadesc">-&gt;          MasterFilterID in Griffin   </td></tr>
-<tr class="data"><td class="datatype">vector&lt;<a href="./ListOfTypes.html#Short_t">Short_t</a>&gt;</td><td class="dataname"><a name="TFragment:wavebuffer"></a>wavebuffer</td><td class="datadesc">-&gt;</td></tr>
+<tr class="data"><td class="datatype">vector&lt;<a href="./ListOfTypes.html#Short_t">Short_t</a>&gt;</td><td class="dataname"><a name="TFragment:wavebuffer"></a>wavebuffer</td><td class="datadesc">-&gt; waveform words</td></tr>
 
 </table></div>
 </div>
@@ -239,7 +247,7 @@ return false;}
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: Tue Sep  2 19:10:06 2014 </em><em>&raquo; Last generated: 2014-09-02 19:10</em><br />
+<em>&raquo; Last changed: Tue Sep  2 21:13:13 2014 </em><em>&raquo; Last generated: 2014-09-02 21:13</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
