--- a/htmldoc/INCLUDE_Index.html
+++ b/htmldoc/INCLUDE_Index.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Tue Sep  2 19:10:06 2014            -->
+<!--   Date: Tue Sep  2 21:13:13 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -42,37 +42,23 @@ return false;}
 </div>
 <h2>Index of INCLUDE</h2>
 <h2>Class Index</h2>
-<div id="indxShortX"><h4>Jump to</h4>
-<a href="#idx0">T</a>
-<a href="#idx1">TF</a>
-<a href="#idx2">TFragmentS</a>
-<a href="#idx3">TG</a>
-<a href="#idx4">TGRSIR</a>
-<a href="#idx5">TGRSIi</a>
-<a href="#idx6">TM</a>
-</div><br />
 <ul id="indx">
-<li class="idxl0"><a name="idx0"></a><a href="./TChannel.html"><span class="typename">TChannel</span></a> </li>
-<li class="idxl1"><a href="./TDataParser.html"><span class="typename">TDataParser</span></a> </li>
-<li class="idxl0"><a name="idx1"></a><a href="./TFragment.html"><span class="typename">TFragment</span></a> TFragment structure</li>
-<li class="idxl1"><a href="./TFragmentQueue.html"><span class="typename">TFragmentQueue</span></a> </li>
-<li class="idxl0"><a name="idx2"></a><a href="./TFragmentSelector.html"><span class="typename">TFragmentSelector</span></a> </li>
-<li class="idxl1"><a name="idx3"></a><a href="./TGRSILoop.html"><span class="typename">TGRSILoop</span></a> </li>
-<li class="idxl0"><a href="./TGRSIOptions.html"><span class="typename">TGRSIOptions</span></a> </li>
-<li class="idxl1"><a name="idx4"></a><a href="./TGRSIRootIO.html"><span class="typename">TGRSIRootIO</span></a> </li>
+<li class="idxl0"><a href="./TChannel.html"><span class="typename">TChannel</span></a> </li>
+<li class="idxl1"><a href="./TFragment.html"><span class="typename">TFragment</span></a> Event Fragments</li>
+<li class="idxl0"><a href="./TFragmentQueue.html"><span class="typename">TFragmentQueue</span></a> </li>
+<li class="idxl1"><a href="./TFragmentSelector.html"><span class="typename">TFragmentSelector</span></a> </li>
 <li class="idxl0"><a href="./TGRSIRunInfo.html"><span class="typename">TGRSIRunInfo</span></a> </li>
 <li class="idxl1"><a href="./TGRSIStats.html"><span class="typename">TGRSIStats</span></a> </li>
-<li class="idxl0"><a name="idx5"></a><a href="./TGRSIint.html"><span class="typename">TGRSIint</span></a> </li>
-<li class="idxl1"><a name="idx6"></a><a href="./TMidasEvent.html"><span class="typename">TMidasEvent</span></a> </li>
-<li class="idxl0"><a href="./TMidasFile.html"><span class="typename">TMidasFile</span></a> </li>
-<li class="idxl1"><a href="./TXMLOdb.html"><span class="typename">TXMLOdb</span></a> </li>
+<li class="idxl0"><a href="./TMidasEvent.html"><span class="typename">TMidasEvent</span></a> </li>
+<li class="idxl1"><a href="./TMidasFile.html"><span class="typename">TMidasFile</span></a> </li>
+<li class="idxl0"><a href="./TXMLOdb.html"><span class="typename">TXMLOdb</span></a> </li>
 </ul>
 
 <br />
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-02 19:10 </em><em>&raquo; Last generated: 2014-09-02 19:10</em><br />
+<em>&raquo; Last changed: 2014-09-02 21:13 </em><em>&raquo; Last generated: 2014-09-02 21:13</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
