--- a/htmldoc/ClassHierarchy.html
+++ b/htmldoc/ClassHierarchy.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Wed Sep  3 09:31:57 2014            -->
+<!--   Date: Wed Sep  3 10:09:11 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -59,17 +59,32 @@ return false;}
 <table><tr><td><ul><li><tt><a name="TGRSIStats" href="./TGRSIStats.html">TGRSIStats</a></tt></li></ul></td><td></td>
 </tr></table>
 <hr />
+<table><tr><td><ul><li><tt><a name="TKinematics" href="./TKinematics.html">TKinematics</a></tt></li></ul></td><td></td>
+</tr></table>
+<hr />
 <table><tr><td><ul><li><tt><a name="TMidasEvent" href="./TMidasEvent.html">TMidasEvent</a></tt></li></ul></td><td></td>
 </tr></table>
 <hr />
 <table><tr><td><ul><li><tt><a name="TMidasFile" href="./TMidasFile.html">TMidasFile</a></tt></li></ul></td><td></td>
+</tr></table>
+<hr />
+<table><tr><td><ul><li><tt><a name="TNucleus" href="./TNucleus.html">TNucleus</a></tt></li></ul></td><td></td>
+</tr></table>
+<hr />
+<table><tr><td><ul><li><tt><a name="TSharc" href="./TSharc.html">TSharc</a></tt></li></ul></td><td></td>
+</tr></table>
+<hr />
+<table><tr><td><ul><li><tt><a name="TSharcData" href="./TSharcData.html">TSharcData</a></tt></li></ul></td><td></td>
+</tr></table>
+<hr />
+<table><tr><td><ul><li><tt><a name="TSharcHit" href="./TSharcHit.html">TSharcHit</a></tt></li></ul></td><td></td>
 </tr></table>
 
 <br />
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-03 09:31 </em><em>&raquo; Last generated: 2014-09-03 09:31</em><br />
+<em>&raquo; Last changed: 2014-09-03 10:09 </em><em>&raquo; Last generated: 2014-09-03 10:09</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
